--- a/META.yml
+++ b/META.yml
@@ -4,24 +4,27 @@ author:
   - 'Mitchell Cooper <cooper@cpan.org>'
 build_requires: {}
 configure_requires:
-  Module::Build: 0.40
+  Module::Build: '0.42'
 dynamic_config: 0
-generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.141520'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Evented-Object
 provides:
   Evented::Object:
     file: lib/Evented/Object.pm
-    version: 3.55
+    version: '5.4'
+  Evented::Object::Collection:
+    file: lib/Evented/Object/Collection.pm
   Evented::Object::EventFire:
     file: lib/Evented/Object/EventFire.pm
-    version: 0
+  Evented::Object::Hax:
+    file: lib/Evented/Object/Hax.pm
 requires:
-  perl: 5.010
+  perl: '5.010'
 resources:
   license: http://opensource.org/licenses/bsd-license.php
   repository: https://github.com/cooper/evented-object
-version: 3.55
+version: '5.4'
